; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_main.c_parse_record_format.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_main.c_parse_record_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"mp4\00", align 1
@RECORDER_FORMAT_MP4 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"mkv\00", align 1
@RECORDER_FORMAT_MKV = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [45 x i8] c"Unsupported format: %s (expected mp4 or mkv)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @parse_record_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_record_format(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @strcmp(i8* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @RECORDER_FORMAT_MP4, align 4
  %11 = load i32*, i32** %5, align 8
  store i32 %10, i32* %11, align 4
  store i32 1, i32* %3, align 4
  br label %22

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strcmp(i8* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* @RECORDER_FORMAT_MKV, align 4
  %18 = load i32*, i32** %5, align 8
  store i32 %17, i32* %18, align 4
  store i32 1, i32* %3, align 4
  br label %22

19:                                               ; preds = %12
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @LOGE(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0), i8* %20)
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %19, %16, %9
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @LOGE(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
